# real2ai

./: .coverage  .env.backup  .env.example  .gitignore  API_INTEGRATION_TEST.md  AUTH_403_FIX_SUMMARY.md  CODEBASE_DEEP_CLEAN_REPORT.md  CONCURRENT_IMAGE_PROCESSING_IMPLEMENTATION.md  DEVELOPMENT_AUTOMATION.md  DOCKER_README.md  FRAGMENT_SYSTEM_IMPLEMENTATION.md  GAPS_AND_RISKS_ANALYSIS.md  IMPLEMENTATION_PRIORITY_TODO.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUPABASE_REPOSITORY.md  README.md  RENDER_DEPLOYMENT.md  RLS_DISABLE_ANALYSIS.md  SECURITY_CHECKLIST.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  TEST_EXECUTION_REPORT.md  TEST_RESULTS_SUMMARY.md  TEST_SUMMARY.md  TODO.md  claude.md  cmd  debug_auth_issue.py  debug_jwt_issue.py  design-specifications.md  design_specification.md  docker-compose.yml  docker.env.example  fix_docker_time_sync.md  pyproject.toml  render-simple.yaml  render.yaml  requirement_architect.md  run-tests.sh  schema_analysis.md  (+4 more)
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  ARCHITECTURE_DESIGN.md  CLIENT_ARCHITECTURE_DESIGN.md  CLIENT_DECOUPLING_SUMMARY.md  CROSS_LOOP_FIX_DOCUMENTATION.md  DATABASE_PERFORMANCE_OPTIMIZATION_README.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_CHECKLIST.md  DIAGRAM_PROMPT_CREATION_SUMMARY.md  DIAGRAM_PROMPT_INTEGRATION_COMPLETE.md  DIAGRAM_RISK_INTEGRATION_SUMMARY.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  ISOLATION_SOLUTION_SUMMARY.md  LANGGRAPH_WORKFLOW_DESIGN.md  LANGSMITH_INTEGRATION_SUMMARY.md  LANGSMITH_PHASE_2_3_IMPLEMENTATION_SUMMARY.md  LIBMAGIC_SETUP.md  MIDDLEWARE_500_ERROR_FIX.md  MIGRATION_EXAMPLE.md  MIGRATION_GUIDE.md  PHASE_2_MIGRATION_SUMMARY.md  PROMPT_CLEANUP_PLAN.md  PROMPT_COMPOSITION_FIX_SUMMARY.md  PROMPT_OPTIMIZATION_ANALYSIS.md  PROMPT_PATH_FIX_SUMMARY.md  PROMPT_SYSTEM_REFACTOR.md  README.md  REDIS_TOKEN_SERVICE_MIGRATION.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_SUMMARY.md  RETRY_LOGIC_FIX_SUMMARY.md  SECURITY_ENHANCEMENTS.md  SECURITY_FIX_SUMMARY.md  SERVICE_REFACTORING_GUIDE.md  TASK_RECOVERY.md  (+81 more)
backend/app/: __init__.py  main.py  main_old.py  startup_diagnostics.py
backend/app/agents/: __init__.py  australian_tools.py  contract_workflow.py  enhanced_contract_workflow.py  enhanced_workflow_tools.py  progress_tracking_workflow.py
backend/app/api/: __init__.py  models.py
backend/app/clients/: __init__.py  factory.py
backend/app/config/: enhanced_workflow_config.py
backend/app/core/: async_utils.py  auth.py  auth_context.py  auth_v2.py  cache_manager.py  celery.py  config.py  database.py  database_optimizer.py  database_v2.py  error_handler.py  file_security.py  langsmith_config.py  langsmith_init.py  logging_config.py  notification_system.py  rate_limiter.py  recovery_orchestrator.py  retry_manager.py  security_config.py  task_context.py  task_recovery.py
backend/app/database/: __init__.py  connection.py
backend/app/dependencies/: supabase.py
backend/app/evaluation/: EVALUATION_UI_PRD.md  __init__.py  langsmith_integration.py
backend/app/middleware/: auth_middleware.py
backend/app/model/: __init__.py  enums.py
backend/app/models/: __init__.py  contract_state.py  document_models.py  evaluation.py  supabase_models.py  usage_examples.py  workflow_outputs.py
backend/app/monitoring/: evaluation_monitoring.py
backend/app/prompts/: ARCHITECTURE.md
backend/app/router/: __init__.py  auth.py  cache.py  contracts.py  documents.py  evaluation.py  example_with_auth.py  health.py  ocr.py  onboarding.py  property_intelligence.py  property_profile.py  users.py  websockets.py  websockets_fixed.py
backend/app/schema/: __init__.py  auth.py  common.py  contract.py  contract_analysis.py  document.py  enums.py  evaluation.py  ocr.py  onboarding.py  property.py  user.py
backend/app/services/: __init__.py  backend_token_service.py  cache_service.py  checkpoint_cleaner.py  contract_analysis_service.py  contract_analysis_service_v2.py  document_service.py  document_service_migrated.py  document_service_not_used.py  document_service_v2.py  enhanced_contract_analysis_service.py  evaluation_service.py  fresh_document_service.py  gemini_ocr_service.py  gemini_ocr_service1.py  gemini_ocr_service_v2.py  gemini_service.py  interfaces.py  market_analysis_service.py  market_intelligence_service.py  ocr_performance_service.py  ocr_service.py  openai_service.py  prompt_engineering_service.py  property_intelligence_service.py  (+9 more)
backend/docker/: entrypoint-worker.sh  evaluation-worker.Dockerfile
backend/docs/: CONCURRENT_UPDATE_FIX_SUMMARY.md  CONTRACTS_ROUTER_CLEANUP.md  CONTRACT_ANALYSIS_SERVICE_CLEANUP.md  DEPLOYMENT.md  EVENT_LOOP_FIX_GUIDE.md  LANGSMITH_AUDIT_REPORT.md  LANGSMITH_EVALUATION_INTEGRATION.md  LLM_EVALUATION_PRODUCTION_SUMMARY.md  STATE_AWARE_PARSING.md  cache_design_caveats.md  font_layout_mapping_system.md  llm_evaluation_system_design.md  timestamp_management.md
backend/examples/: README.md  enhanced_async_utils_usage.py  font_mapping_demo.py  layout_format_cleanup_demo.py  root_cause_prevention_example.py  state_aware_parsing_example.py
backend/migrations/: create_evaluation_tables.sql
backend/monitoring/: prometheus.yml
backend/requirements/: evaluation.txt
backend/scripts/: README.md  clear_data.py  fragment_inventory_results.yaml  generate_requirements.sh  inventory_current_fragments.py  migrate.py  migrate_fragments.py  run_comprehensive_tests.py  seed_database.py  standalone_fragment_demo.py  test.sh  test_font_mapping.py  test_new_fragment_system.py  validate_prompt.py  validate_repository_migration.py
backend/test_results/: result_ocr_whole_document_extraction_gemini_2_5_flash.txt  test_context_ocr.json  test_ocr_whole_document_extraction_gemini_2_5_flash.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_auth_context.py  test_auth_middleware.py  test_contracts.py  test_documents.py  test_file_security.py  test_health.py  test_migration_example.py  test_onboarding_unit.py  test_output_parser.py  test_prompt_parser_integration.py  test_repositories_integration.py
(+1074 files in other folders)
